--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm": "ts-node --project tsconfig.orm.json -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:show": "yarn typeorm migration:show -d src/db/dataSource.ts",
     "migration:generate": "yarn typeorm migration:generate -d src/db/dataSource.ts",
     "migration:create": "yarn typeorm migration:create",
